--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@slack/client": "^3.15.0"
+    "@slack/client": "^3.15.0",
+    "express": "^4.16.2"
   }
 }
